Adicionado o link ao arquivo .js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <img src="./src/images/icon-dice.svg" alt="botão">
     </button>
   </main>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
