atributo id adicionado a tag button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="./src/images/pattern-divider-desktop.svg" alt="">
       </picture>
     </div>
-    <button>
+    <button id="atualizar-conselho">
       <img src="./src/images/icon-dice.svg" alt="botão">
     </button>
   </main>
